bin/kubernetes/coam/k8s.020.default.sc-share.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nfs-client-provisioner
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: nfs-client-provisioner
  template:
    metadata:
      labels:
        app: nfs-client-provisioner
    spec:
      serviceAccountName: nfs-client-provisioner
      containers:
        - name: nfs-client-provisioner
          image: quay.io/external_storage/nfs-client-provisioner:latest
          volumeMounts:
            - name: nfs-client-share
              mountPath: /persistentvolumes
      volumes:
        - name: nfs-client-share
          nfs:
            server: 2.tcs.iirii.com
            path: /data/home/coam/Share

---
kind: Pod
apiVersion: v1
metadata:
  name: test-share-pod
spec:
  containers:
    - name: test-share-pod
      image: busybox
      imagePullPolicy: IfNotPresent
      command: ["sleep"]
      args: ["infinity"]
      volumeMounts:
        - name: nfs-share-pvc
          mountPath: "/data/shares"
  restartPolicy: "Never"
  volumes:
    - name: nfs-share-pvc
      persistentVolumeClaim:
        claimName: test-share-pvc
