bin/kubernetes/coam/k8s.run.yaml
apiVersion: v1
kind: Pod
metadata:
  name: testclient
  namespace: default
spec:
  containers:
    - name: kafka
      image: confluentinc/cp-kafka:5.0.1
      command:
        - sh
        - -c
        - "exec tail -f /dev/null"

---
apiVersion: v1
kind: Service
metadata:
  name: kafka-us
spec:
  type: NodePort
  #type: LoadBalancer
  externalTrafficPolicy: Cluster
  ports:
    # SSH 端口
    - name: tcp-isp-docs-9092
      protocol: TCP
      port: 9092
      targetPort: 9092
      nodePort: 29292
  selector:
    statefulset.kubernetes.io/pod-name: kafka-0
  sessionAffinity: None
